[CSS Regions] Fix selection and hover effect of content in region with overflow:hidden https://bugs.webkit.org/show_bug.cgi?id=127101

Patch by Mihai Maerean <mmaerean@adobe.com> on 2014-02-03
Reviewed by Mihnea Ovidenie.

Source/WebCore:

RenderNamedFlowFragments are not hit candidates. The hit test algorithm will pick the
parent layer, the one of the region.

Test: fast/regions/hover-overflow-hidden.html

* rendering/RenderLayer.cpp:
(WebCore::isHitCandidate):

LayoutTests:

* fast/regions/hover-overflow-hidden.html: Added.
* fast/regions/hover-overflow-hidden-expected.html: Added.

Canonical link: https://commits.webkit.org/146118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163302 268f45cc-cd09-0410-ab3c-d52691b4dbfc